server/.happypack/s-559604818
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Tools/parts/ContentTool.js: Unexpected token (11:38)

[0m [90m  9 | [39m    render(){
 [90m 10 | [39m
[31m[1m>[22m[39m[90m 11 | [39m        console[33m.[39mlog([36mthis[39m[33m.[39mprops[33m.[39mblocks[33m.[39m)[33m;[39m
 [90m    | [39m                                      [31m[1m^[22m[39m
 [90m 12 | [39m
 [90m 13 | [39m        let content[33m,[39m temp[33m;[39m
 [90m 14 | [39m        [36mswitch[39m ([36mthis[39m[33m.[39mprops[33m.[39mtools[33m.[39mcurrentItem){[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Tools/parts/ContentTool.js: Unexpected token (11:38)

[0m [90m  9 | [39m    render(){
 [90m 10 | [39m
[31m[1m>[22m[39m[90m 11 | [39m        console[33m.[39mlog([36mthis[39m[33m.[39mprops[33m.[39mblocks[33m.[39m)[33m;[39m
 [90m    | [39m                                      [31m[1m^[22m[39m
 [90m 12 | [39m
 [90m 13 | [39m        let content[33m,[39m temp[33m;[39m
 [90m 14 | [39m        [36mswitch[39m ([36mthis[39m[33m.[39mprops[33m.[39mtools[33m.[39mcurrentItem){[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)